# vdiskhash

./: .gitignore  Cargo.toml  LICENSE  dist-workspace.toml  maskfile.md
src/: direct_io.rs  main.rs
util/: benchmark.sh  integration_test.sh
