[package]
name = "vdiskhash"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A command-line tool to compute hashes of virtual disk contents."
repository = "https://github.com/yasuoo-netapp/vdiskhash"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
rayon = "1.10"
qcow = "1.2"
vhdx = "0.1"
vmdk = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
